IE 6 disappearing titles fixed. Alignment of filterNames and filterValue fields finally DONE

--- a/htdocs/martview/martview_template.css
+++ b/htdocs/martview/martview_template.css
@@ -324,7 +324,6 @@ div#mart_export_data
 }
 .mart_filtername
 {
-	width: 40%;
 	float: left;
 }
 .mart_filtervalue
